# pygt1000

./: LICENSE  README.md  pyproject.toml
pygt1000/: __init__.py  constants.py  gt1000.py
scripts/: options-to-json.py
tests/: test_gt1000.py
